# AgriProbe

./: .gitignore  README.md  prj.conf
DC_test/: CMakeLists.txt  prj.conf
DC_test/boards/: app.overlay
DC_test/src/: main.c
agriprobe_sim/: .gitignore  CMakeLists.txt  prj.conf  prj.config
agriprobe_sim/src/: main.c  main.cpp
blink_test/: .gitignore  CMakeLists.txt
blink_test/src/: main.cpp
boards/: app.overlay
dts/bindings/: stepper-motors.yaml
src/: stepper_test.c
stepper_test/: CMakeLists.txt  prj.conf
stepper_test/bindings/stepper-motors/: gpio-stepper-motor.yaml
stepper_test/boards/: app.overlay  nucleo_f446re.overlay
stepper_test/src/: main.c
test_app/: CMakeLists.txt
test_app/src/: main.c
